--- a/beatbuzz-ui/client/package.json
+++ b/beatbuzz-ui/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
